--- a/public/styles/sass/home.scss
+++ b/public/styles/sass/home.scss
@@ -1,6 +1,5 @@
 @media screen and (min-width: 0px){
   #above-fold_home{
-    
     display:flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -8,15 +7,16 @@
   }
   #image_home{
     background-image: url(/assets/images/cover2.jpeg);
-    background-size: 131vw;
-    height: 272.92px;
+    height: 468.92px;
     /* height: calc(100vh - 89px - 115px); */
     width: 100vw;
     left: 0px;
-    background-position-x: center;
-    /* position: absolute; */
+    position: absolute;
     z-index: -1;
-    background-position: 0px 0px;
+    background-position: center;
+    background-position-y: -1px;
+    top:0px;
+    background-size: 648px 432px;
   }
   .cover-text_home{
     font-family: acier-bat-solid, sans-serif;
@@ -25,14 +25,13 @@
     margin:0;
   }
   #cover-text-background_home{
-    
     width: 100%;
-    /* background: transparent linear-gradient(180deg, #DFDFDFC9 0%, #DFDFDF 100%) 0% 0% no-repeat padding-box; */
-    background-color: #DFDFDF;
-    height: auto;
+    // background: linear-gradient(180deg, #DFDFDFC9 0%, #DFDFDF 100%) 0% 0% no-repeat padding-box; 
+    background: linear-gradient(180deg, hsla(0,0,87,.81) 0%, hsla(0,0,87,1) 71%, hsla(0,0,87,1) 100%); 
     position: relative;
     padding: 35px 5.4%;
     box-sizing: border-box;
+    margin-top: 272.8px;
   }
   #cover-text-A_home{
     /* margin-top:36.6px; */
@@ -54,7 +53,7 @@
     margin: 30px 0;
     opacity:0;
     transition: opacity .5s;
-    box-shadow: 3px 5px 6px #00000078;
+    box-shadow: 3px 5px 26px #00000078;
   }
   /* #spaces-tab{
     opacity:0;
@@ -122,27 +121,32 @@
     flex-wrap: wrap;
   }
   .tab_home{
-    width:47%;
+    width:100%;
     height:43vh;
+  }
+  .tab_link{
+    width:47%;
   }
  
   #kathy-tab_home{
     width:100%;
   }
   .kathyTab_contact{
-    padding: 0px 0px 80px 490px;
+    padding: 0px;
+    width:100%;
   }
   #image_home{
     z-index: -1;
-    background-position: 1px -185px;
     width:100vw;
-    background-position: -199px -398px;
+    background-position: center;
+    background-position-y: -259px;
+    background-size:cover;
   }
   #above-fold_home{
 
   }
   #cover-text-background_home{
-    
+    background: linear-gradient(180deg, hsla(0,0,87,.81) 0%, hsla(0,0,87,1) 71%, hsla(0,0,87,1) 100%); 
   }
   #tab-section_home{
     margin-top:0px;
