--- a/public/styles/spaces.css
+++ b/public/styles/spaces.css
@@ -119,7 +119,7 @@
         flex-direction: column;
         /* margin: 0 auto; */
         /* width: 100%; */
-        justify-content: space-between;
+        /* justify-content: space-between; */
         border-right: 1px solid;
         text-align:left;
       }
@@ -128,7 +128,7 @@
           opacity:.63;
           font-weight:900;
           margin:0;
-          margin: 14px 0;
+          margin: 8px 0;
       }
       .description_module{
           font-weight:600;
@@ -199,6 +199,7 @@
     #image_spaces{
         justify-content:flex-start;
         margin-bottom: 100px;
+        background-position-y: -140px;
     }
     
     .module{
