--- a/public/styles/sass/spaces.scss
+++ b/public/styles/sass/spaces.scss
@@ -1,17 +1,14 @@
 
-@font-face {
-    font-family: 'Muli-800';
-    letter-spacing:-14px;
-    font-weight:700;
-    src: url("../assets//fonts/muli-v20-latin/muli-800/muli-v20-latin-800.svg") format("svg");
-    /* url('../../assets/fonts/poppins/bold/poppins-v9-latin-700.woff') format('woff'),
-    url('../../assets/fonts/poppins/bold/poppins-v9-latin-700.woff2') format('woff2'),
-    url("../../assets/fonts/poppins/bold/poppins-v9-latin-700.otf") format("opentype"),
-    url("../../assets/fonts/poppins/bold/poppins-v9-latin-700.ttf") format("truetype"); */
-  }
+// @font-face {
+//         font-family: 'Muli-800';
+//         letter-spacing:-14px;
+//         font-weight:700;
+//         src: url("../assets/fonts/muli-v20-latin/muli-800/muli-v20-latin-800.svg") format("svg"); 
+//       }
 
 @media screen and (min-width: 0px){
 
+    
     
 
     #image_spaces{
@@ -65,7 +62,7 @@
           font-family:Muli;
       }
       .title_module{
-          font-family: 'Muli-800';
+          font-family: Muli, sans-serif;
           font-weight: 800;
           font-size: 26px;
           text-align: center;
